html css commits
html css finishing details

--- a/softuni-practice-server-master 19.10.49/settings.json
+++ b/softuni-practice-server-master 19.10.49/settings.json
@@ -204,7 +204,7 @@
             "126777f5-3277-42ad-b874-76d043b069cb": {
                 
                     "_ownerId": "847ec027-f659-4086-8032-5173e2f9c93a",
-                    "ownerName": "Ivanina",
+                    "ownerName": "Konstantina",
                     "type": "Japanese Dragon",
                     "img": "https://tattoocrafters.com/wp-content/uploads/2024/01/A-detailed-Japanese-style-dragon-tattoo-design-showcasing-intricate-scales-flowing-whiskers-and-fierce-expressive-eyes.-The-dragon-is-coiled-in-a.png",
                     "description": "A majestic Japanese dragon wrapped in swirling clouds and flames, symbolizing strength, wisdom, and protection.",
